tests/neg/i3187.scala
package scala

// nopos-error
// nopos-error
// nopos-error
// nopos-error
// nopos-error
// nopos-error
// nopos-error
// nopos-error
// nopos-error
// nopos-error

// nopos-error
// nopos-error
// nopos-error
// nopos-error
// nopos-error
// nopos-error
// nopos-error
// nopos-error

object collection
